; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_script.c_set_script_prop.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_script.c_set_script_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@IID_IActiveScriptProperty = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Could not get IActiveScriptProperty iface: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"SetProperty(%x) failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i32*)* @set_script_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_script_prop(%struct.TYPE_3__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = bitcast i32** %7 to i8**
  %13 = call i32 @IActiveScript_QueryInterface(i32 %11, i32* @IID_IActiveScriptProperty, i8** %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i64 @FAILED(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  %19 = call i32 (i8*, i32, ...) @WARN(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %34

20:                                               ; preds = %3
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @IActiveScriptProperty_SetProperty(i32* %21, i32 %22, i32* null, i32* %23)
  store i32 %24, i32* %8, align 4
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @IActiveScriptProperty_Release(i32* %25)
  %27 = load i32, i32* %8, align 4
  %28 = call i64 @FAILED(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %20
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %8, align 4
  %33 = call i32 (i8*, i32, ...) @WARN(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %17, %30, %20
  ret void
}

declare dso_local i32 @IActiveScript_QueryInterface(i32, i32*, i8**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @WARN(i8*, i32, ...) #1

declare dso_local i32 @IActiveScriptProperty_SetProperty(i32*, i32, i32*, i32*) #1

declare dso_local i32 @IActiveScriptProperty_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
